--- a/t-shirt/index.html
+++ b/t-shirt/index.html
@@ -40,7 +40,7 @@
             height: 20px;
         }
 
-        .nav-tabs>.active>a, .nav-tabs>.active>a:hover {
+        .nav-tabs > .active > a, .nav-tabs > .active > a:hover {
             color: #555555;
             background-color: #ffffff;
             border: 1px solid transparent;
@@ -122,8 +122,6 @@
             top: 30%;
         }
 
-
-
         .btn-file {
             position: relative;
             overflow: hidden;
@@ -153,8 +151,6 @@
             top: 0em;
         }
 
-
-
         .modal-backdrop {
             position: fixed;
             top: 0;
@@ -170,14 +166,14 @@
             padding: 19px;
             margin-bottom: 20px;
             background-color: white;
-            border : 0;
+            border: 0;
             /*border: 1px solid #e3e3e3;$
             */
             /* -webkit-border-radius: 4px; */
             /*-moz-border-radius: 4px;*/
-             border-radius: 0px;
-            box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-            transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+            border-radius: 0px;
+            box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+            transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
         }
 
         .nav-tabs {
@@ -215,7 +211,7 @@
                                     <h5>Produit :</h5>
                                     <select class="mdb-select" v-model="selectedItemKey">
                                         <option value="1" selected="selected" v-bind:value="item.key"
-                                                v-for="item in productList">{{item.nom}}
+                                                v-for="item in productList">{{item.gamme}}
                                         </option>
                                     </select>
                                     <input type="button" v-on:click="changeProduct" class="btn btn-primary"
@@ -284,7 +280,8 @@
                 <div class="span6">
                     <div align="center" style="min-height: 32px;">
                         <div class="clearfix">
-                            <div class="btn-group inline pull-left" id="texteditor" style="display:none; z-index: 9999999999999999999;">
+                            <div class="btn-group inline pull-left" id="texteditor"
+                                 style="display:none; z-index: 9999999999999999999;">
                                 <button id="font-family" class="btn dropdown-toggle" data-toggle="dropdown"
                                         title="Font Style"><i class="icon-font" style="width:19px;height:19px;"></i>
                                 </button>
@@ -391,7 +388,9 @@
                                 </div>
                                 <div class="modal-footer">
                                     <button type="button" class="btn btn-default" data-dismiss="modal">Annuler</button>
-                                    <button type="button" v-on:click.stop="addProductToCart($event)" class="btn btn-primary">Valider</button>
+                                    <button type="button" v-on:click.stop="addProductToCart($event)"
+                                            class="btn btn-primary">Valider
+                                    </button>
                                 </div>
                             </div>
                         </div>
@@ -431,12 +430,6 @@
                     <div class="well">
                         <h5>Quantité :</h5>
                         <input type="text" v-model="userProduct.quantity" placeholder="" value="">
-                    </div>
-                    <div class="well">
-                        <h5>Gamme :</h5>
-                        <select id="gamme" v-model="selectedItem.gamme">
-                            <option>{{selectedItem.gamme}}</option>
-                        </select>
                     </div>
                 </div>
 
