--- a/t-shirt/index.html
+++ b/t-shirt/index.html
@@ -280,7 +280,7 @@
                     </div>
                 </div>
                 <div class="span6">
-                    <div align="center">
+                    <div align="center" style="min-height: 32px;">
                         <div class="clearfix">
                             <div class="btn-group inline pull-left" id="texteditor"
                                  style="display:none; z-index: 9999999999999999999;">
