fix() : modal des boutons collés

--- a/t-shirt/index.html
+++ b/t-shirt/index.html
@@ -168,6 +168,10 @@
             background-color: black;
         }
 
+        .btn:first-child {
+            margin: 10px;
+        }
+
         .well {
             min-height: 20px;
             padding: 19px;
