Sprint 5 : Fix & divers
- Changement de face d'un produit en cours de création
- Charte graphique IHM création produit 
- Changement produit

--- a/t-shirt/index.html
+++ b/t-shirt/index.html
@@ -31,6 +31,15 @@
             background: none;
         }
 
+        h1, h2, h3, h4, h5, h6 {
+            margin: 10px 0;
+            font-family: 'Telex',sans-serif;
+            line-height: 1;
+            color: black;
+            text-rendering: optimizelegibility;
+        }
+
+
         .color-preview {
             border: 1px solid #CCC;
             margin: 2px;
@@ -174,7 +183,7 @@
 
         .well {
             min-height: 20px;
-            padding: 19px;
+            padding: 20px;
             margin-bottom: 20px;
             background-color: white;
             border: 0;
